[package]
name = "ic_tee_host_daemon"
version = "0.1.0"
description = ""
publish = false
edition = "2021"
repository = "https://github.com/ldclabs/ic-tee-host-daemon"
keywords = ["tee", "canister", "icp", "nitro"]
categories = ["web-programming"]
license = "MIT"

[dependencies]
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-vsock = "0.5"
anyhow = "1"
clap = { version = "4.5", features = ["derive"] }
log = "0.4"
structured-logger = "1"
libc = "0.2"

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1
opt-level = 's'
